; ModuleID = '/home/carl/AnghaBench/ish/kernel/extr_signal.c_sighand_copy.c'
source_filename = "/home/carl/AnghaBench/ish/kernel/extr_signal.c_sighand_copy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sighand = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.sighand* @sighand_copy(%struct.sighand* %0) #0 {
  %2 = alloca %struct.sighand*, align 8
  %3 = alloca %struct.sighand*, align 8
  %4 = alloca %struct.sighand*, align 8
  store %struct.sighand* %0, %struct.sighand** %3, align 8
  %5 = call %struct.sighand* (...) @sighand_new()
  store %struct.sighand* %5, %struct.sighand** %4, align 8
  %6 = load %struct.sighand*, %struct.sighand** %4, align 8
  %7 = icmp eq %struct.sighand* %6, null
  br i1 %7, label %8, label %9

8:                                                ; preds = %1
  store %struct.sighand* null, %struct.sighand** %2, align 8
  br label %18

9:                                                ; preds = %1
  %10 = load %struct.sighand*, %struct.sighand** %4, align 8
  %11 = getelementptr inbounds %struct.sighand, %struct.sighand* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = load %struct.sighand*, %struct.sighand** %3, align 8
  %14 = getelementptr inbounds %struct.sighand, %struct.sighand* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = call i32 @memcpy(i32 %12, i32 %15, i32 4)
  %17 = load %struct.sighand*, %struct.sighand** %4, align 8
  store %struct.sighand* %17, %struct.sighand** %2, align 8
  br label %18

18:                                               ; preds = %9, %8
  %19 = load %struct.sighand*, %struct.sighand** %2, align 8
  ret %struct.sighand* %19
}

declare dso_local %struct.sighand* @sighand_new(...) #1

declare dso_local i32 @memcpy(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
